--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<phone:PhoneApplicationPage xmlns:AppPromo="clr-namespace:AppPromo;assembly=AppPromo.WP8" 
     x:Class="Split_It_.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -31,7 +31,7 @@
         </Grid.RowDefinitions>
         
         <local:AdControl Grid.Row="0"/>
-        
+        <AppPromo:RateReminder />
         <!--Pivot Control-->
         <phone:Pivot Grid.Row="1" Title="{Binding Path=LocalizedResources.ApplicationTitle, Source={StaticResource LocalizedStrings}}" SelectionChanged="Pivot_SelectionChanged">
             <!--Pivot item one-->
