--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -155,6 +155,14 @@
                                    Tap="create_group_Tap"
                                    FontSize="{StaticResource userDetailnameSize}"/>
 
+                            <TextBlock Name="account_settings" 
+                                   Padding="12" 
+                                   Text="account settings" 
+                                   Foreground="Black" 
+                                   toolkit:TiltEffect.IsTiltEnabled="True"
+                                   Tap="account_settings_Tap"
+                                   FontSize="{StaticResource userDetailnameSize}"/>
+
                             <TextBlock Name="logout" 
                                    Padding="12" 
                                    Text="logout" 
