--- a/Split_It/AccountSettings.xaml
+++ b/Split_It/AccountSettings.xaml
@@ -7,12 +7,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:PhoneTextBox="clr-namespace:Telerik.Windows.Controls.PhoneTextBox;assembly=Telerik.Windows.Controls.Primitives" 
     xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Core" 
     xmlns:telerikInput="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Input"
     xmlns:ListPicker="clr-namespace:Telerik.Windows.Controls.ListPicker;assembly=Telerik.Windows.Controls.Input" 
-    xmlns:app="clr-namespace:Split_It_.Converter"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -21,7 +19,6 @@
     shell:SystemTray.IsVisible="False">
 
     <phone:PhoneApplicationPage.Resources>
-        <app:CacheImageFileConverter x:Key="PictureFileConverter"/>
         <Style x:Key="PopupHeaderStyle" TargetType="ContentControl">
             <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
             <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
@@ -187,83 +184,93 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Background="{StaticResource splitwiseGreen}" Grid.Row="0">
             <TextBlock Foreground="White" 
-				Text="create group" 
+				Text="account settings" 
 				Margin="15,25" 
 				FontSize="{StaticResource PivotTitleFontSize}"/>
         </StackPanel>
 
         <Grid Grid.Row="1" Background="White">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <StackPanel Orientation="Vertical">
 
-            <telerikPrimitives:RadTextBox Grid.Row="0" 
-				x:Name="tbName"
-				BorderThickness="0"
-                InputScope="Text"
-				Foreground="Black" 
-				Watermark="enter name of group" 
-				Padding="10"
-                TextChanged="tbName_TextChanged"
-				VerticalAlignment="Top" 
-				Style="{StaticResource GreyBGRadTextBoxStyle}"/>
-
-            <TextBlock Grid.Row="1"
+                <TextBlock
                      Margin="15,15,15,10"
                      Foreground="Black"
                      TextWrapping="Wrap"
-                     Text="Add friends to this group:"
-                     FontSize="22"/>
+                     Text="First Name"
+                     FontSize="23"/>
+                
+                <telerikPrimitives:RadTextBox
+				    x:Name="tbFirstName"
+                    Text="{Binding first_name}"
+				    BorderThickness="0"
+                    InputScope="Text"
+				    Foreground="Black"
+				    Padding="10"
+				    VerticalAlignment="Top" 
+				    Style="{StaticResource GreyBGRadTextBoxStyle}"/>
 
-            <telerikInput:RadListPicker Grid.Row="2"
-						Header="Friends"
+                <TextBlock
+                     Margin="15,15,15,10"
+                     Foreground="Black"
+                     TextWrapping="Wrap"
+                     Text="Last Name"
+                     FontSize="23"/>
+
+                <telerikPrimitives:RadTextBox
+				    x:Name="tbLastName"
+                    Text="{Binding last_name}"
+				    BorderThickness="0"
+                    InputScope="Text"
+				    Foreground="Black"
+				    Padding="10"
+				    VerticalAlignment="Top" 
+				    Style="{StaticResource GreyBGRadTextBoxStyle}"/>
+
+                <TextBlock
+                     Margin="15,15,15,10"
+                     Foreground="Black"
+                     TextWrapping="Wrap"
+                     Text="Email"
+                     FontSize="23"/>
+
+                <telerikPrimitives:RadTextBox
+				    x:Name="tbEmail"
+                    Text="{Binding email}"
+				    BorderThickness="0"
+                    InputScope="EmailUserName"
+				    Foreground="Black"
+				    Padding="10"
+				    VerticalAlignment="Top" 
+				    Style="{StaticResource GreyBGRadTextBoxStyle}"/>
+
+                <TextBlock
+                     Margin="15,15,15,10"
+                     Foreground="Black"
+                     TextWrapping="Wrap"
+                     Text="Default Currency"
+                     FontSize="23"/>
+
+                <telerikInput:RadListPicker
+						Header="Currency"
 						BorderBrush="{StaticResource splitwiseGreyBG}"
 						Foreground="Black"
                         Margin="12,0"
-						x:Name="friendListPicker"
+						FontSize="{StaticResource nameSize}"
+                        FontWeight="Bold" 
+						x:Name="currencyListPicker"
 						ActionButtonVisibility="Collapsed"
-						SelectionMode="Multiple"
-                        SelectionChanged="friendListPicker_SelectionChanged"
+						SelectionMode="Single"
 						OkButtonIconUri="/Assets/Icons/ok.png"
 						CancelButtonIconUri="/Assets/Icons/cancel.png" 
-                        PopupHeader="SELECT FRIENDS" 
-                        Style="{StaticResource RadListPickerStyle1}">
-                <telerikInput:RadListPicker.PopupItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding name}"/>
-                    </DataTemplate>
-                </telerikInput:RadListPicker.PopupItemTemplate>
-            </telerikInput:RadListPicker>
-
-            <TextBlock Grid.Row="3"
-                     Margin="15,15,0,10"
-                     Foreground="Black"
-                     TextWrapping="Wrap"
-                     Text="Group Members:"
-                     FontSize="22"/>
-
-            <Grid Grid.Row="4" Margin="0,0,0,10">
-                <phone:LongListSelector Name="llsFriends">
-                    <phone:LongListSelector.ItemTemplate>
+                        PopupHeader="SELECT CURRENCY" 
+                        Style="{StaticResource RadListPickerStyle1}" >
+                    <telerikInput:RadListPicker.PopupItemTemplate>
                         <DataTemplate>
-                            <Border BorderThickness="0">
-                                <Grid Margin="15,0,15,5">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Image Grid.Column="0" Source="{Binding picture, Converter={StaticResource PictureFileConverter}, ConverterParameter='Assets/Images/profilePhoto.png'}" VerticalAlignment="Center" Width="75" Height="75" Margin="0,0,15,0"/>
-                                    <TextBlock x:Name="tbName" TextTrimming="WordEllipsis" Foreground="Black" Text="{Binding name}" Grid.Column="1" FontSize="{StaticResource nameSize}" VerticalAlignment="Center"/>
-                                </Grid>
-                            </Border>
+                            <TextBlock Text="{Binding currency_code}"/>
                         </DataTemplate>
-                    </phone:LongListSelector.ItemTemplate>
-                </phone:LongListSelector>
-            </Grid>
+                    </telerikInput:RadListPicker.PopupItemTemplate>
+                </telerikInput:RadListPicker>
+            </StackPanel>
         </Grid>
 
         <telerikPrimitives:RadBusyIndicator Background="#CC000000"
