--- a/Split_It/GroupDetail.xaml
+++ b/Split_It/GroupDetail.xaml
@@ -9,6 +9,7 @@
     xmlns:helper="clr-namespace:Split_It_.ExpandableListHelper"
     xmlns:app="clr-namespace:Split_It_.Converter"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     mc:Ignorable="d"
     Style="{StaticResource TransitionPageStyle}"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -95,7 +96,7 @@
 
             <!--Pivot item two-->
             <phone:PivotItem Margin="0,5,0,0" Header="expenses">
-                <phone:LongListSelector Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}" ItemRealized="llsExpenses_ItemRealized" SelectionChanged="llsExpenses_Tap"/>
+                <telerikPrimitives:RadDataBoundListBox Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}" SelectionChanged="llsExpenses_Tap"/>
             </phone:PivotItem>
         </phone:Pivot>
     </Grid>
