--- a/Split_It/GroupDetail.xaml
+++ b/Split_It/GroupDetail.xaml
@@ -96,7 +96,10 @@
 
             <!--Pivot item two-->
             <phone:PivotItem Margin="0,5,0,0" Header="expenses">
-                <telerikPrimitives:RadDataBoundListBox Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}" SelectionChanged="llsExpenses_Tap"/>
+                <telerikPrimitives:RadDataBoundListBox Name="llsExpenses" 
+                                                       ItemTemplate="{StaticResource expensesTemplate}" 
+                                                       DataVirtualizationMode="OnDemandAutomatic"
+                                                       SelectionChanged="llsExpenses_Tap"/>
             </phone:PivotItem>
         </phone:Pivot>
     </Grid>
