--- a/Split_It/CreateGroup.xaml
+++ b/Split_It/CreateGroup.xaml
@@ -20,7 +20,7 @@
     shell:SystemTray.IsVisible="False">
     
     <phone:PhoneApplicationPage.Resources>
-        <app:CacheImageFileConverter x:Key="PictureFileConverter"/>
+        <app:MyAppJetImageLoaderConverter x:Key="JetImageLoaderConverter"/>
         <Style x:Key="PopupHeaderStyle" TargetType="ContentControl">
             <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
             <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
@@ -255,7 +255,9 @@
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Image Grid.Column="0" Source="{Binding picture, Converter={StaticResource PictureFileConverter}, ConverterParameter='Assets/Images/profilePhoto.png'}" VerticalAlignment="Center" Width="75" Height="75" Margin="0,0,15,0"/>
+                                    <Image Grid.Column="0" 
+                                           Source="{Binding PictureUrl, Converter={StaticResource JetImageLoaderConverter}}"
+                                           VerticalAlignment="Center" Width="75" Height="75" Margin="0,0,15,0"/>
                                     <TextBlock x:Name="tbName" TextTrimming="WordEllipsis" Foreground="Black" Text="{Binding name}" Grid.Column="1" FontSize="{StaticResource nameSize}" VerticalAlignment="Center"/>
                                 </Grid>
                             </Border>
