--- a/Split_It/ExpenseSearch.xaml
+++ b/Split_It/ExpenseSearch.xaml
@@ -65,7 +65,7 @@
                 </telerikPrimitives:RadTextBox.ClearButtonStyle>
             </telerikPrimitives:RadTextBox>
 
-            <phone:LongListSelector Name="llsExpenses"
+            <telerikPrimitives:RadDataBoundListBox Name="llsExpenses"
                                     Grid.Row="1" 
                                     Margin="0,5,0,0"
                                     ItemTemplate="{StaticResource expensesTemplate}"
