--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -207,6 +207,17 @@
                 </ScrollViewer>
             </phone:PivotItem>
         </phone:Pivot>
+
+
+        <telerikPrimitives:RadBusyIndicator Foreground="White"
+                                            VerticalAlignment="Top"
+                                            x:Name="busyIndicator"
+                                            Grid.Row="0" 
+                                            Grid.RowSpan="2"
+                                            AnimationStyle="AnimationStyle9" 
+                                            Padding="0" 
+                                            ContentPosition="Left"/>
+
     </Grid>
 
 </phone:PhoneApplicationPage>
