fixes #34 and prepare v.1.2.8 for release

--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -87,7 +87,13 @@
 
             <!--Pivot item two-->
             <phone:PivotItem Margin="0,5,0,0" Header="notes">
-                <TextBlock Margin="20" TextWrapping="Wrap" Text="{Binding details}" Foreground="Black" FontSize="{StaticResource userDetaildescriptionSize}"/>
+                <ScrollViewer>
+                    <TextBlock Margin="20" 
+                           TextWrapping="Wrap"
+                           Text="{Binding details}" 
+                           Foreground="Black" 
+                           FontSize="{StaticResource userDetaildescriptionSize}"/>
+                </ScrollViewer>
             </phone:PivotItem>
 
             <!--Pivot item three-->
